# Pricing-Competition

./: LICENSE  Notebook Links.md  README.md  all plots.ipynb  homogeneous_data.csv  homogeneous_data.json  notes.md  ppo_vs_ppo_schemeA.py  pso_vs_pso.py  pso_vs_pso_schemeB.py  pso_vs_pso_schemeC.py  pso_vs_pso_shock_a.py  pyproject.toml  q_vs_dqn.py  q_vs_dqn_schemeA.py  q_vs_ppo.py  q_vs_pso.py  q_vs_pso_schemeA.py  q_vs_pso_schemeC.py  q_vs_pso_shock_a.py  q_vs_q.py  q_vs_q_schemeB.py  reference_shock_implementation.py  run_all_simulations.py  theoretical_benchmarks.csv  verify_scheme_a.py
.ipynb_checkpoints/: aggregate-checkpoint.ipynb  all plots-checkpoint.ipynb
agents/: __init__.py  continuousppo.py  ddpg.py  dqn.py  dqn.py.bak  dqn.py.bak.2  mod_pso.py  mod_qlearner.py  pso.py  qlearner.py  qlearner.py.bak
ddpg_vs_ddpg/: ddpg_vs_ddpg.py  ddpg_vs_ddpg_2.py  ddpg_vs_ddpg_schemeA.py  ddpg_vs_ddpg_schemeA_2.py  ddpg_vs_ddpg_schemeB.py  ddpg_vs_ddpg_schemeB_2.py  ddpg_vs_ddpg_schemeC.py  ddpg_vs_ddpg_schemeC_2.py  ddpg_vs_ddpg_scheme_A.py  ddpg_vs_ddpg_scheme_C.py  run.sh
diagnosis/: diagnostic_benchmarks.py  test_linear_fix.py
documentation/: Notebook Links.md
dqn_vs_ddpg/: dqn_vs_ddpg.py  dqn_vs_ddpg_2.py  dqn_vs_ddpg_schemeA.py  dqn_vs_ddpg_schemeB.py  dqn_vs_ddpg_schemeC.py  run.sh
dqn_vs_dqn/: dqn_vs_dqn.py  dqn_vs_dqn_1.py  dqn_vs_dqn_2.py  dqn_vs_dqn_schemeA.py  dqn_vs_dqn_schemeA_1.py  dqn_vs_dqn_schemeA_2.py  dqn_vs_dqn_schemeB.py  dqn_vs_dqn_schemeB_2.py  dqn_vs_dqn_schemeC.py  dqn_vs_dqn_schemeC_2.py  run.sh
environments/: __init__.py  (+2 more)
(+1479 files in other folders)
