[project]
name = "pricing-competition"
version = "0.1.0"
description = "Simulating Price Setting Under Uncertainty using RL Agent: Q, PSO, DQN, DDPG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "basedpyright>=1.39.5",
    "jupyter>=1.1.1",
    "kaggle>=2.2.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pip>=25.3",
    "ruff>=0.14.7",
    "scikit-posthocs>=0.14.0",
    "scipy>=1.16.3",
    "torch>=2.9.0",
]

[tool.setuptools]
packages = ["agents", "shocks", "theoretical_benchmarks", "environments"]

[tool.basedpyright]
typeCheckingMode = "standard"
